[package]
name = "craft"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true

[workspace.package]
edition = "2021"
authors = ["nerodono <nerodono0@gmail.com>"]
repository = "https://github.com"

[workspace]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
